# slack-mcp-server

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  README_DOCKERHUB.md  TEST_README.md  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  sonar-project.properties
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/tag_and_release/: intent.yaml  release-notes.md  release-title.md  schema.json
.github/workflows/: cd.yaml  ci.yaml  ci_includes_e2e_test.yaml  docker-ci.yml  dockerhub-readme-ci.yml  docs-automerge.yml  docs-build-check.yaml  documentation.yaml  release-staging.yml  release-validate.yml  release.yml  rw_build_and_test.yaml  rw_organize_test_cov_reports.yaml  rw_poetry_run_test_with_multi_py_versions.yaml  rw_python_package.yaml  rw_run_all_test_and_record.yaml  rw_sonarqube_scan.yaml  rw_uv_run_test.yaml  rw_uv_run_test_with_multi_py_versions.yaml  type-check.yml  validate_slack_event_types.yml
docs/: README.md  docusaurus.config.ts  index.md  package.json  pnpm-lock.yaml  tsconfig.json
docs/.ai_discussion_conclusion/: MQ_Spec_en.md  MQ_Spec_zh.md
docs/dev_versioned_sidebars/: version-0.0.1-sidebars.json  version-0.0.2-sidebars.json  version-0.1.0-sidebars.json
docs/docs_versioned_sidebars/: version-0.0.1-sidebars.json  version-0.0.2-sidebars.json
examples/event_handler/: advanced_slack_handlers.py  decorator_handler_example.py  slack_event_handlers.py
examples/mcp_clients/: easy_mcp_client_with_sse.py  easy_mcp_client_with_sse_in_web.py  easy_mcp_client_with_streamable_http.py  easy_mcp_client_with_streamable_http_in_web.py
examples/type_checking/: README.md  type_checking_example.py
scripts/: run_all_tests.sh
scripts/ci/: deploy-latest-version-documentation.sh  deploy-stable-version-documentation.sh  generate-software-version.sh  release_intent.py  update_slack_ip_allowlist.py  validate_slack_event_types.py  verify_type_checking.sh
scripts/docker/: run-mcp-server.sh  run-server.sh  run-slack-mcp-server.sh  run-slack-webhook-server.sh
slack_mcp/: __init__.py  client_factory.py  client_manager.py  entry.py  event_handler.py  events.py  integrated_server.py  model.py  server.py  settings.py  slack_app.py  slack_models.py  slack_server.py  types.README.md  types.py
slack_mcp/_base/: __init__.py  app.py
slack_mcp/backends/: __init__.py  consumer.py  loader.py  memory.py  protocol.py
slack_mcp/client/: __init__.py  factory.py  manager.py
slack_mcp/consumer/: __init__.py  slack_event.py
slack_mcp/handler/: __init__.py  base.py  decorator.py
slack_mcp/integrate/: app.py  integrated_server.py  server.py
slack_mcp/logging/: config.py
slack_mcp/mcp/: __init__.py  __main__.py  app.py  entry.py  server.py  socket_mode.py
slack_mcp/webhook/: __init__.py  __main__.py  app.py  entry.py  server.py
test/: .env.test.example  conftest.py  settings.py
test/ci_script_test/: test_validate_slack_event_types.py
test/e2e_test/: .env.example  .gitignore  common_utils.py  slack_retry_utils.py  test_backend_loader_e2e.py  test_integrated_server.py  test_read_thread_e2e.py  test_slack_e2e.py  test_slack_server.py  test_transport_e2e.py
test/integration_test/: test_env_loading_entry.py  test_env_loading_webhook.py  test_integrated_server.py  test_slack_server.py
test/logging/: __init__.py  config.py
(+203 files in other folders)
