[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "slack-mcp"
version = "0.0.0"
description = "🦾 A strong MCP server for Slack."
authors = [
    { name = "Chisanan232", email = "chi10211201@cycu.org.tw" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["slack", "mcp", "mcp-server", "slack-mcp", "slack-mcp-server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dependencies = []

[tool.poetry]
packages = [
    { include = "slack_mcp/" },
]

[project.urls]
Homepage = "https://github.com/Chisanan232/slack-mcp-server"
Repository = "https://github.com/Chisanan232/slack-mcp-server"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
#pytest-html = "^4.1.1"    # Generate a report as HTML about test
#pytest-rerunfailures = "^14.0"    # Rerun feature in test for PyTest
coverage = "^6.2"    # Test coverage feature with service *CodeCov*
#coveralls = "^3.3.1"    # Test coverage feature with service *Coverall*

[tool.poetry.group.pre-commit-ci]
optional = true

[tool.poetry.group.pre-commit-ci.dependencies]
pre-commit = "^3.5.0"
pylint = "^3.1.0"
mypy = "^1.2.0"
