[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-mcp"
version = "0.0.0"
description = "🦾 A strong MCP server for Slack."
authors = [{ name = "Chisanan232", email = "chi10211201@cycu.org.tw" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "slack",
    "mcp",
    "mcp-server",
    "slack-mcp",
    "slack-mcp-server",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mcp[cli]>=1.9.4",
    "slack-sdk>=3.35.0",
]

[project.urls]
Homepage = "https://github.com/Chisanan232/slack-mcp-server"
Repository = "https://github.com/Chisanan232/slack-mcp-server"

[project.scripts]
slack-mcp-server = "slack_mcp.entry:main"

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "pytest-cov>=5.0.0,<6",
    "coverage~=6.2",
    "pytest-rerunfailures>=14.0,<15",
    "aiohttp>=3.12.13",
    "pytest-asyncio>=0.23.0,<1",
]
pre-commit-ci = [
    "pre-commit>=3.5.0,<4",
    "pylint>=3.1.0,<4",
    "mypy>=1.2.0,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "pre-commit-ci",
]

[tool.hatch.build.targets.sdist]
include = ["slack_mcp/"]

[tool.hatch.build.targets.wheel]
include = ["slack_mcp/"]
